--- a/assets/index.css
+++ b/assets/index.css
@@ -10,17 +10,19 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.6;
     background-color: #f4f4f4;
-    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
 }
-
+main{
+    background-color: #E1F5FE;
+    }
 /* Contenedor centrado */
 .container {
     max-width: 900px;
-    padding: 0 20px;
-    margin: 8px 8px 8px; 
+    padding: 20px;
+    margin: 0px 8px 0px 0px; 
     width: 100%;
     display:flex;
     flex-direction: row;
@@ -32,9 +34,11 @@ body {
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
-    max-width: 300px;  
+    width: 400px;
+    min-height: 450px;
     margin: 20px 15px auto;
     transition: transform 0.3s ease;
+    display: flex;
     
 }
 
@@ -45,7 +49,7 @@ body {
 /* Imagen de la card */
 .card-image {
     width: 100%;
-    height: auto;
+    height: 200px;
     display: block;
 }
 
@@ -53,6 +57,7 @@ body {
 .card-content {
     padding: 20px;
     text-align: center;
+    
 }
 
 /* Título de la card */
