--- a/assets/camino.css
+++ b/assets/camino.css
@@ -14,3 +14,10 @@
 .carousel-control-next-icon {
     background-color:  black;
 }
+
+.carousel-caption{
+    font-style: italic;
+    font-size: 1rem;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    text-align: center;
+}
